objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Cost__c</fullName>
        <label>Asset Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_EMIs__c</fullName>
        <formula>case(Loan_Type__c,
'Personal',48,
'Vehicle',30,
'Housing',48,
'Property',60,
0

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of EMIs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Date__c</fullName>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Security__c</fullName>
        <label>Loan Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <formula>if( ISPICKVAL( Loan_Security__c , 'Salary') ,
case(Loan_Type__c,
'Housing',24*0.80*Salary__c,
'Personal',20*0.60*Salary__c,
'Vehicle',20*0.50*Salary__c,
0
),

Asset_Cost__c*0.60



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_of_Intrest__c</fullName>
        <formula>case(Loan_Type__c,
'Personal',12,
'Vehicle',20,
'Housing',15,
'Property',10,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate of Intrest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan</label>
    <nameField>
        <displayFormat>LNo-{00000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>